# vanvinkl-portfolio

./: .gitignore  ANALYSIS.md  ANALYSIS_DESKTOP_ROLES.md  ANALYSIS_SLOT_COMPLETE.md  CLAUDE.md  FINAL_STATUS.md  KEYBOARD_SHORTCUTS.md  PROGRESS_REPORT.md  SESSION_2026-01-28.md  SESSION_2026-01-28_COMPLETE.md  SESSION_2026-01-28_FAZA1_FINAL.md  SESSION_2026-01-28_FAZA2_COMPLETE.md  SESSION_2026-01-28_FAZA3_COMPLETE.md  SESSION_2026-01-28_FINAL.md  SESSION_2026-01-28_PART2.md  SESSION_FINAL_SUMMARY.md  TODO.md  TODO_100_PERCENT.md  TODO_DESKTOP_ULTIMATE.md  TODO_MOBILE_SLOT_ULTIMATE.md  TODO_MOBILE_ULTIMATE.md  deploy.sh  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
public/: manifest.json  offline.html  sw.js
public/audio/: README.md
public/audioSlotPortfolio/portfolio/: Mummy-BG.m4a  (+15 more)
scripts/: generate-placeholder-audio.cjs
src/: App.tsx  index.css  main.tsx
src/audio/: AudioDSP.ts  AudioSystem.ts  SynthSounds.ts  UnifiedAudioSystem.test.ts  UnifiedAudioSystem.ts  compatibility.ts  index.ts  useAudio.ts
src/components/: AudioVolumeSync.test.tsx  AudioVolumeSync.tsx  Avatar.tsx  AvatarEffects.tsx  BondCasinoLounge.tsx  CasinoArchitecture.tsx  CasinoCanvas.tsx  CasinoScene.tsx  CyberpunkCursor.tsx  CyberpunkSlotMachine.tsx  DustParticles.tsx  GPUParticles.tsx  IGTSlotMachine.tsx  InfoModal.tsx  IntroSequence.tsx  LuxurySlotMachine.tsx  MagicCursor.tsx  MobileControls.tsx  PostProcessing.tsx  ProximityFeedback.tsx  SlotFullScreen.tsx  SlotMachineEffects.tsx  SlotTransition.tsx  VegasCasinoArchitecture.tsx  VegasSlotMachine.tsx  WebGLErrorBoundary.tsx  WinCelebration.tsx
src/hooks/: useKonamiCode.ts  usePageVisibility.ts  useReducedMotion.ts
src/pwa/: index.ts  registerSW.ts
src/store/: achievements.ts  audio.ts  gameStore.ts  index.ts  quality.ts  slotContent.ts
src/test/: sanity.test.ts  setup.ts
src/utils/: performance.test.ts  performance.ts  security.test.ts  security.ts
vanvinkl-casino/: index.html  package-lock.json  package.json  vite.config.ts
vanvinkl-casino/src/: App.tsx
vanvinkl-game/: Cargo.toml  build.sh
vanvinkl-game/assets/: SLOT_MACHINE_SPEC.md
vanvinkl-game/pkg/: vanvinkl_game.d.ts  vanvinkl_game.js  vanvinkl_game_bg.wasm.d.ts
vanvinkl-game/src/: camera.rs  casino.rs  entrance.rs  interaction.rs  lib.rs  main.rs  player.rs  rendering.rs  slot_machine.rs  ui.rs
vanvinkl-game/web/: index.html  style.css
vanvinkl-slot/: .gitignore  FEATURES.md  REALISTIC-3D.md  next.config.ts  package-lock.json  package.json
vanvinkl-slot/crates/vanvinkl-dsp/: Cargo.toml
vanvinkl-slot/crates/vanvinkl-dsp/src/: analysis.rs  biquad.rs  dynamics.rs  lib.rs  reverb.rs  spatial.rs  synthesis.rs
vanvinkl-slot/public/: manifest.json  sw.js
vanvinkl-slot/scripts/: generate-icons.js  generate-placeholder-audio.sh  generate-screenshots.js
vanvinkl-ultimate/: package-lock.json  package.json
(+203 files in other folders)
