[package]
name = "vanvinkl-game"
version = "0.1.0"
edition = "2024"
authors = ["VanVinkl"]
description = "Vegas-style 3D portfolio game"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vanvinkl-game"
path = "src/main.rs"

[dependencies]
# Game Engine - Full AAA Rendering
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_gizmos",
    "multi_threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "webgl2",
] }

# Physics
bevy_rapier3d = { version = "0.28", features = ["wasm-bindgen"] }

# Animation
bevy_tweening = "0.12"

# WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
] }
console_error_panic_hook = "0.1"

# Utilities
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols

[profile.release-native]
inherits = "release"
opt-level = 3        # Max speed for native

[features]
default = []
native = ["bevy/wayland", "bevy/x11"]

