[package]
name = "vanvinkl-dsp"
version = "0.1.0"
edition = "2024"
authors = ["VanVinkl Studio"]
description = "High-performance DSP engine for VanVinkl Casino Lounge"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
simd = []

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "AudioContext",
    "AudioWorkletNode",
    "AudioWorkletProcessor",
    "AudioBuffer",
    "OfflineAudioContext",
    "MessagePort",
    "MessageEvent",
] }

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

# DSP
rustfft = "6.2"
realfft = "3.4"

# SIMD (when targeting wasm32-simd128)
wide = "0.7"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3
